[project]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = [
    {name = "super-unknowledge",email = "64061479+super-unknowledge@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
