# pyproject.toml
[project]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = [
    {name = "super-unknowledge",email = "64061479+super-unknowledge@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "insecure-package (>=0.1.0,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = {extras = ["toml"], version = "^7.7.0"}
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
